--- a/README.org
+++ b/README.org
@@ -1,4 +1,6 @@
 * shrimpray
+[[./render/19.jpg]]
+
 #+begin_quote
 One of the most complex eyes in the animal kingdom can be found in
 species of stomatopod crustaceans (mantis shrimp), some of which have
@@ -8,3 +10,26 @@ nanometers). Functionally, this chromatic complexity has presented a
 mystery. Why use 12 color channels when three or four are sufficient
 for fine color discrimination? ---Science, Vol. 343, 24 Jan 2014
 #+end_quote
+
+*shrimpray* is my first project in Rust. It is an implementation of a
+ray tracer in Rust while following [[https://raytracing.github.io/][Ray Tracing in One Weekend Series]]
+as a guide. The style of code attempts to be idiomatic while
+minimizing mutables.  Wrapper types such as ~Option<T>~, ~Rc<T>~, and
+~Box<T>~ are used. The mantis shrimp is a cool creature.
+
+Additional renders can be found under the [[./render][render]] folder
+
+** Building and Running
+#+begin_src sh
+# Build
+cargo build --release
+
+# Render to PPM
+cargo run --release > scene.ppm
+
+# Convert render to JPG
+convert scene.ppm scene.jpg
+#+end_src
+
+** License
+Project under [[./LICENSE][MIT License]]
