--- a/README.org
+++ b/README.org
@@ -1,5 +1,6 @@
 * shrimpray
 [[./render/39.jpg]]
+[[./render/compare.jpg]]
 
 #+begin_quote
 One of the most complex eyes in the animal kingdom can be found in
@@ -15,7 +16,8 @@ for fine color discrimination? ---Science, Vol. 343, 24 Jan 2014
 ray tracer in Rust while following [[https://raytracing.github.io/][Ray Tracing in One Weekend Series]]
 as a guide. The style of code attempts to be idiomatic while
 minimizing mutables.  Thread safe primitives for parallel processing.
-The mantis shrimp is a cool creature.
+Monte carlo is used for the rendering to converge to an accurate image
+faster. The mantis shrimp is a cool creature.
 
 Additional renders can be found under the [[./render][render]] folder
 
